# CppBasic

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
Application/: CMakeLists.txt
Application/Executable/: CMakeLists.txt  main.cpp
Application/Part1/: CMakeLists.txt
Application/Part1/includes/Part1/: Specific1.h  Specific1Factory.h  Specific2.h
Application/Part1/src/: Specific1.cpp  Specific1.hpp  Specific1Factory.cpp  Specific1Factory.hpp  Specific2.cpp  Specific2.hpp
Application/Part1Interfaces/: CMakeLists.txt
Application/Part1Interfaces/includes/Part1Interfaces/: Component1FactoryInterface.h  Component1Interface.h
Application/Part1Interfaces/src/: Component1FactoryInterface.hpp
Part1/src/: Specific1.cpp  Specific1.hpp
Part1Interfaces/src/: Component1Interface.hpp
Tests/: CMakeLists.txt
Tests/UnitTests/Part1/: CMakeLists.txt  Specific1.cpp  Specific1Factory.cpp  Specific2.cpp
application/: CMakeLists.txt  main  main.cpp
